saving major changes first, about to implement a kalman filter to track the data

--- a/l2cs_net/package.xml
+++ b/l2cs_net/package.xml
@@ -9,6 +9,8 @@
 
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>cv_bridge</depend>
   <depend>dgei_interfaces</depend>
 
   <test_depend>ament_copyright</test_depend>
